--- a/src/main/webapp/static/asserts/echarts/flatMapAutoTip.css
+++ b/src/main/webapp/static/asserts/echarts/flatMapAutoTip.css
@@ -1,3 +1,6 @@
+body{
+	font-family: "Microsoft yahei", 微软雅黑, "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
 #echartTips {
     position: absolute;
     top: 0;
