实验室总数及分布下方增加各产线互联数 ，全屏地图实验室主要功能分类数字位置

--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -56,9 +56,11 @@
                 <div class="sphere-right-top">
                     <div class="chartBorder">
                         <h3>实验室总数及分布</h3>
-                        <h4 class="noBG">实验室总数： <strong id="lab_all_count" class="lab_all_count"> 0 </strong></h4>
-                        <ul id="pro_line" class="pro_line">
+                        <h4 class="noBG" style="float: left;margin-left: 3%">实验室总数： <strong id="lab_all_count" class="lab_all_count"> 0 </strong></h4>
+                        <h4 class="noBG noHL" style="float: right;margin-right: 4%">互联数：<strong class="lab_all_count">0</strong></h4>
+                        <ul id="pro_line" class="pro_line full_pro_line">
                         </ul>
+
                     </div>
 
                 </div>
