--- a/src/main/webapp/static/css/index_left.css
+++ b/src/main/webapp/static/css/index_left.css
@@ -538,7 +538,14 @@
     color: #66ccff;
     font-size: .8em;
     line-height: 130%;
+    /*width: 50%;*/
+    /*float: left;*/
     /*background-color: rgba(102,204,255,.15);*/
+}
+#l .sphere .chartBorder h4.noHL,
+#l .flat .chartBorder h4.noHL{
+    float: right;
+    text-align: right;
 }
 #l .flat .flat-right-bottom .chartBorder h4{
     margin: 4% 2% 0;
@@ -627,7 +634,7 @@
 #l .sphere-right-top ul,
 #l .flat .chartBorder ul{
     position: relative;
-    margin: 1% 15% 1% 18%;
+    margin: 1% 1% 1% 3%;
     top: 20%;
     height: 72%;
     font-size: 1.1em;
@@ -645,10 +652,10 @@
 #l .sphere-right-top ul li .icon{
     display: inline-block;
     position: relative;
-    margin-right: 0.5em;
-    top: .4em;
-    width: 1.5em;
-    height: 1.5em;
+    margin-right: 0.3em;
+    top: .3em;
+    width: 1.3em;
+    height: 1.3em;
     background-size: 100% 100%;
 }
 
@@ -677,20 +684,27 @@
 #l .flat .chartBorder ul li .number {
     position: relative;
     top: 10%;
-    height: 102%;
+    height: 100%;
     background-image: url(../img/bgNumber.png);
     background-size: 94% 100%;
     background-repeat: no-repeat;
     font-size: 1.3em;
     letter-spacing: .4em;
-    padding: 0 0 0 1%;
+    /* padding: 0 0 0 1%; */
     float: right;
+    margin-right: 2%;
+}
+
+#l .sphere .chartBorder ul li .hlnum,
+#l .flat .chartBorder ul li .hlnum{
+    margin-right: 0;
 }
 #l #switchlegend{
     position: absolute;
     left: 10px;
     bottom:10px;
 }
+
 
 
 
