--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -57,7 +57,7 @@
                     <div class="chartBorder">
                         <h3>实验室总数及分布</h3>
                         <h4 class="noBG" style="float: left;margin-left: 3%">实验室总数： <strong id="lab_all_count" class="lab_all_count"> 0 </strong></h4>
-                        <h4 class="noBG noHL" style="float: right;margin-right: 4%">互联数：<strong class="lab_all_count">0</strong></h4>
+                        <h4 class="noBG noHL" style="float: right;margin-right: 4%">互联数：<strong class="lab_all_count_link">0</strong></h4>
                         <ul id="pro_line" class="pro_line full_pro_line">
                         </ul>
 
@@ -67,7 +67,7 @@
                 <div class="sphere-right-bottom">
                     <div class="chartBorder">
                         <h3>互联实验室</h3>
-                        <h4 class="noBG">互联实验室： <strong id="linked_status_num"> </strong></h4>
+                        <h4 class="noBG">互联实验室： <strong id="linked_status_num" class="lab_all_count_link"> </strong></h4>
                         <ul class="header">
                             <li>实验室名称</li>
                             <li>所在地</li>
