--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -26,11 +26,16 @@
             <div class="sphere-left">
                 <div class="sphere-left-top">
                     <div class="chartBorder">
-                        <h3>海尔工业园区分布</h3>
+                        <h3>海尔实验室全球分布</h3>
                         <h4 class="noBG">覆盖：
-                            <strong id="area_num">0</strong>大洲
+                            <!-- <strong id="area_num">0</strong>大洲
                             <strong id="country_num">0</strong>个国家
-                            <strong id="belong_num">0</strong>工业园区
+                            <strong id="belong_num">0</strong>工业园区 -->
+                            <strong id="area_num">0</strong>大洲
+                            <strong>10</strong>大研发中心
+                            <!-- <strong id="country_num">0</strong>个国家 -->
+                            <!-- <strong id="belong_num">0</strong>工业园区 -->
+                            <strong>24</strong>工业园区
 
                         </h4>
                         <div class="myChart"></div>
@@ -55,9 +60,9 @@
             <div class="sphere-right">
                 <div class="sphere-right-top">
                     <div class="chartBorder">
-                        <h3>实验室总数及分布</h3>
-                        <h4 class="noBG" style="float: left;margin-left: 3%">实验室总数： <strong id="lab_all_count" class="lab_all_count"> 0 </strong></h4>
-                        <h4 class="noBG noHL" style="float: right;margin-right: 4%">互联数：<strong class="lab_all_count_link">0</strong></h4>
+                        <h3>各产品实验室数</h3>
+                        <h4 class="noBG" style="float: left;margin-left: 16%">总数： <strong id="lab_all_count" class="lab_all_count"> 0 </strong></h4>
+                        <h4 class="noBG noHL" style="float: right;margin-right: 10%">互联数：<strong class="lab_all_count_link">0</strong></h4>
                         <ul id="pro_line" class="pro_line full_pro_line">
                         </ul>
 
@@ -65,8 +70,8 @@
 
                 </div>
                 <div class="sphere-right-bottom">
-                    <div class="chartBorder">
-                        <h3>互联实验室</h3>
+                    <div class="chartBorder" style="background: url(${contextPath!}/static/img/border_flat.png);    background-size: 100% 100%;">
+                        <h3 style="    left: 0%;">互联实验室明细</h3>
                         <h4 class="noBG">互联实验室： <strong id="linked_status_num" class="lab_all_count_link"> </strong></h4>
                         <ul class="header">
                             <li>实验室名称</li>
