--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -35,7 +35,7 @@
                             <strong>10</strong>大研发中心
                             <!-- <strong id="country_num">0</strong>个国家 -->
                             <!-- <strong id="belong_num">0</strong>工业园区 -->
-                            <strong>24</strong>工业园区
+                            <strong>24</strong>个工业园区
 
                         </h4>
                         <div class="myChart"></div>
