--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -31,7 +31,7 @@
                                 <!-- <strong id="country_num">0</strong>个国家 -->
                                 <!-- <strong id="belong_num">0</strong>工业园区 -->
                                 <br>
-                                <strong>24</strong>工业园区
+                                <strong>24</strong>个工业园区
 
                             </h4>
                             <div class="myChart"></div>
