--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="sphere-left-bottom">
                     <div class="chartBorder">
-                        <h3>覆盖产品</h3>
+                        <h3>测试产品类别</h3>
                         <h4 class="noBG"><strong>50+</strong>类家电产品</h4>
                         <div class="myChart">
                             <iframe id="wordCloud" width="100px" height="100px"
@@ -60,7 +60,7 @@
             <div class="sphere-right">
                 <div class="sphere-right-top">
                     <div class="chartBorder">
-                        <h3>各产品实验室数</h3>
+                        <h3>实验室数量</h3>
                         <h4 class="noBG" style="float: left;margin-left: 30%">总数： <strong id="lab_all_count" class="lab_all_count"> 0 </strong></h4>
                         <h4 class="noBG noHL" style="float: right;margin-right: 7%">互联数：<strong class="lab_all_count_link">0</strong></h4>
                         <ul id="pro_line" class="pro_line full_pro_line">
@@ -71,7 +71,7 @@
                 </div>
                 <div class="sphere-right-bottom">
                     <div class="chartBorder" style="background: url(${contextPath!}/static/img/border_flat.png);    background-size: 100% 100%;">
-                        <h3 style="    left: 0%;">互联实验室明细</h3>
+                        <h3 style="    left: 0%;">互联实验室</h3>
                         <h4 class="noBG">互联实验室： <strong id="linked_status_num" class="lab_all_count_link"> </strong></h4>
                         <ul class="header">
                             <li>实验室名称</li>
