--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="sphere-left-bottom">
                         <div class="chartBorder">
-                            <h3>覆盖产品</h3>
+                            <h3>测试产品类别</h3>
                             <h4 class="noBG"><strong>50+</strong>类家电产品</h4>
                             <div class="myChart">
                                 <iframe id="wordCloud" src="${contextPath!}/lab/wordCloud"></iframe>
@@ -62,7 +62,7 @@
                                                 </div>
                         -->
                         <div class="chartBorder">
-                            <h3>各产品实验室数</h3>
+                            <h3>实验室数量</h3>
                             <h4 class="noBG" style="float: left;margin-left: 25%">总数： <strong id="lab_all_count" class="lab_all_count"> 0 </strong></h4>
                             <h4 class="noBG noHL" style="float: right;margin-right: 3%">互联数：<strong  class="lab_all_count_link">0</strong></h4>
                             <ul id="pro_line" class="pro_line">
@@ -73,7 +73,7 @@
                     </div>
                     <div class="sphere-right-bottom">
                         <div class="chartBorder" style="background: url(${contextPath!}/static/img/border_sphereLTRT.png);    background-size: 100% 100%;">
-                            <h3>互联实验室明细</h3>
+                            <h3>互联实验室</h3>
                             <h4 class="noBG">互联实验室： <strong id="linked_status_num" class="lab_all_count_link">  </strong></h4>
                             <ul class="header">
                                 <li>实验室名称</li>
