--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -35,7 +35,6 @@
 
                             </h4>
                             <div class="myChart"></div>
-                        </div>
                     </div>
                     <div class="sphere-left-bottom">
                         <div class="chartBorder">
@@ -48,7 +47,7 @@
                     </div>
                 </div>
                 <div class="mapArea">
-                    <h2>数据互联&emsp;实时共享&emsp;&emsp;提效增值</h2>
+                    <h2>数据互联&emsp;实时共享&emsp;提效增值</h2>
                     <!--球体地图位置-->
                     <iframe  class="iframe map" id="sphereIFrame3x3" src="${contextPath!}/lab/sphereMap"></iframe>
                 </div>
