改动右侧结构分国内外。

--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -72,7 +72,7 @@
 
                     </div>
                     <div class="sphere-right-bottom">
-                        <div class="chartBorder" style="background: url(${contextPath!}/static/img/border_sphereLTRT.png);    background-size: 100% 100%;">
+                        <div class="chartBorder" style="background: url(${contextPath!}/static/img/border_sphereLTRT.png);  background-size: 100% 100%;">
                             <h3>互联实验室</h3>
                             <h4 class="noBG">互联实验室： <strong id="linked_status_num" class="lab_all_count_link">  </strong></h4>
                             <ul class="header">
@@ -97,7 +97,7 @@
                         </div>
                     </div>
                 </div>
-            </div sty>
+            </div >
             <div class="switch flat" style="display: flex">
                 <div class="flat-main">
                     <div class="flat-left">
