--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -4,7 +4,7 @@
     left: 12%;
 }
 .labMain_cb_left{
-    padding-top: 2%;
+    /*padding-top: 2%;*/
 }
 .shishi_left{
     height: 95%;
@@ -19,7 +19,10 @@
     /*background: url("../img/labMain/shishiBoder.png") no-repeat;*/
     /*background-size: 97% 95%;*/
     position: relative;
-    display: none;
+    /*display: none;*/
+}
+.shishi_right>div{
+    height: 96%;
 }
 .sheshi_right_top{
 	height: 8%;
