--- a/src/main/webapp/static/css/labMain.css
+++ b/src/main/webapp/static/css/labMain.css
@@ -16,11 +16,7 @@
     zoom: 1
 }
 
-body {
-    color: #64ccff;
-}
-
-a, a:hover,a:focus {
+a, a:hover, a:focus {
     color: #64ccff;
 }
 
@@ -31,8 +27,8 @@ a, a:hover,a:focus {
 
 /**中海实验室  labMain start**/
 /*content star*/
-.labMain_content{
-   /*width: 98%;*/
+.labMain_content {
+    /*width: 98%;*/
     /*height: 100%;*/
     /*background: url(../img/bg_star2.jpg) center center no-repeat;*/
     /*background-size: cover;*/
@@ -58,28 +54,34 @@ a, a:hover,a:focus {
     line-height: 2em;
     /*  font-weight:700; */
 }
-.labMain_ct_btn{
+
+.labMain_ct_btn {
     position: absolute;
     text-align: center;
     top: 2em;
     cursor: pointer;
 }
-.labMain_ct_btn:nth-of-type(1){
+
+.labMain_ct_btn:nth-of-type(1) {
     left: 2em;
 }
+
 .labMain_ct_btn:nth-of-type(2) {
     right: 4em;
 }
+
 .labMain_ct_btn .icon {
     width: 2em;
     height: 2em;
     margin: 0 auto .5em;
     background-size: 100% 100%;
 }
-.labMain_ct_btn:nth-of-type(1) .icon{
+
+.labMain_ct_btn:nth-of-type(1) .icon {
     background-image: url("../img/labMain/labMain_toTotalStatus.png");
 }
-.labMain_ct_btn:nth-of-type(2) .icon{
+
+.labMain_ct_btn:nth-of-type(2) .icon {
     background-image: url("../img/labMain/home.png");
 }
 
@@ -93,8 +95,8 @@ a, a:hover,a:focus {
 
 .labMain_cb_left {
     flex: 3;
-    background: url(../img/labMain/lab_left_border_wider.png) 0 0 no-repeat;
-    background-size: 100% 100%;
+    /*background: url(../img/labMain/lab_left_border_wider.png) 0 0 no-repeat;*/
+    /*background-size: 100% 100%;*/
     position: relative;
     margin: .8em 1em;
     display: flex;
@@ -111,11 +113,13 @@ a, a:hover,a:focus {
     top: .5em;
     left: 9em;
 }
-.zhbr_lab{
+
+.zhbr_lab {
     height: 90%;
     width: 100%;
     /*padding-top: 2%;*/
 }
+
 .zhbr_lab .labMain_cbl_one {
     /*height: 100%;
     width: 50%;
@@ -123,27 +127,27 @@ a, a:hover,a:focus {
 
 }
 
-.labMain_cbl_one{
-	flex:1;
-	margin:0.1% 1em 0.5% 1em;
-	display:flex;
-	flex-direction: row;
-	height: 98%;
-	
-	
+.labMain_cbl_one {
+    flex: 1;
+    margin: 0.1% 1em 0.5% 1em;
+    display: flex;
+    flex-direction: row;
+    height: 98%;
+
 }
 
-.labMain_cbl_one img{
-	/*width: 90%;
+.labMain_cbl_one img {
+    /*width: 90%;
     margin: 4em 3em;*/
-	vertical-align:middle;
-	
+    vertical-align: middle;
+
 }
-.labMain_cbl_two{
-    flex:1;
-	margin:2% 1em 0.5% 1em;
-	display:flex;
-	flex-direction: row;
+
+.labMain_cbl_two {
+    flex: 1;
+    margin: 2% 1em 0.5% 1em;
+    display: flex;
+    flex-direction: row;
     height: 46%;
 
 }
@@ -165,9 +169,9 @@ a, a:hover,a:focus {
 }
 
 .labMain_cblt_tone {
-     /*flex:1;*/
+    /*flex:1;*/
     width: 35%;
-	margin: 0.5%;
+    margin: 0.5%;
     font-size: 1.3em;
 
 }
@@ -177,7 +181,7 @@ a, a:hover,a:focus {
     height: 2em;
     line-height: 2em;
     width: 13em;
-    background: url(../img/labMain/gznx-bg.png) 0 0 no-repeat;
+    /*background: url(../img/labMain/gznx-bg.png) 0 0 no-repeat;*/
     background-size: 100% 100%;
     margin: 3% 1%;
     color: #fff;
@@ -188,8 +192,9 @@ a, a:hover,a:focus {
     margin: 1em;
 
 }
-.labMain_cbl_one .labMain_cblt_tone p{
-    font-size: 1.05em;
+
+.labMain_cbl_one .labMain_cblt_tone p {
+    font-size: .92em;
     text-indent: 2em;
 }
 
@@ -197,57 +202,61 @@ a, a:hover,a:focus {
     /*flex: 2;*/
     background: url("../img/labMain/znjd-bg.png") no-repeat;
     background-size: 100% 100%;
-   /*margin:0 0.5% ;*/
-	width: 65%;
+    /*margin:0 0.5% ;*/
+    width: 65%;
 
 }
+
 /*轮播*/
 /*轮播图*/
-.labMain_lunbo{
-	margin-top:0;
-	width:49em;
-	overflow:hidden;
-	position:relative;
-
-	}
-.labMain_lunbo ul{
-	position:relative;
-	height:24.6em;
-
-	}
-.labMain_lunbo ul li{
-	float:left;
-	display:inline;
-	margin:0 0.7em;
-	position:relative;
-
-}
-.labMain_lunbo ul li img{
-	width:24.6em;
-	height:24.6em;
-
-}
-.labMain_lunbo ul li span{
-	width:20.5em;
-	height:2em;
-	line-height:2em;
-	background:rgba(0,0,0,0.4);
-	text-align:center;
-	font-size:1.2em;
-	color:#fff;
-	position:absolute;
-	left:0;
-	bottom:7%;
-	z-index:9;
-	/*display:none;*/
+.labMain_lunbo {
+    margin-top: 0;
+    width: 49em;
+    overflow: hidden;
+    position: relative;
 
 }
 
-.labMain_cblt_ttwo img{
-    width: 66em;
+.labMain_lunbo ul {
+    position: relative;
+    height: 24.6em;
+
+}
+
+.labMain_lunbo ul li {
+    float: left;
+    display: inline;
+    margin: 0 0.7em;
+    position: relative;
+
+}
+
+.labMain_lunbo ul li img {
+    width: 24.6em;
+    height: 24.6em;
+
+}
+
+.labMain_lunbo ul li span {
+    width: 20.5em;
+    height: 2em;
+    line-height: 2em;
+    background: rgba(0, 0, 0, 0.4);
+    text-align: center;
+    font-size: 1.2em;
+    color: #fff;
+    position: absolute;
+    left: 0;
+    bottom: 7%;
+    z-index: 9;
+    /*display:none;*/
+
+}
+
+.labMain_cblt_ttwo img {
+    width: 63em;
     height: 99%;
-	}
-
+}
 
 .labMain_cblt_bottom {
     flex: 1;
@@ -262,9 +271,11 @@ a, a:hover,a:focus {
     flex-direction: column;
 
 }
-.labMain_cbr_tab{
-	cursor:pointer;
+
+.labMain_cbr_tab {
+    cursor: pointer;
 }
+
 .labMain_cbr_one {
     flex: 1;
     display: flex;
@@ -273,7 +284,7 @@ a, a:hover,a:focus {
     background: url(../img/labMain/lab_right_border.png) 0 0 no-repeat;
     background-size: 100% 100%;
     position: relative;
-  
+
 }
 
 .labMain_cb_right h3 {
