--- a/src/main/webapp/static/css/labOprateState.css
+++ b/src/main/webapp/static/css/labOprateState.css
@@ -9,13 +9,13 @@
 	display: flex;
 	width: 100%;
 	flex-direction: column;
-	padding: 1% 1% 2%;
+	padding: 2.4% 1% 2%;
 	height: 100%;
 }
 .pageBtn {
 	position: absolute;
 	right: 2.5%;
-	top: 4%;
+	/*top: 4%;*/
 }
 .pageBtn .icon{
 	display: inline-block;
@@ -52,10 +52,8 @@
 	position: relative;
 	font-size: 1.1em;
 }
-/*.l-top-title{*/
 [class$=-title]{
-	/*flex:1;*/
-	margin: 1%;
+	margin: 1% 1% 1% 0;
 	width:2.3em;
 	color: #fff;
 	font-size: 1.2em;
@@ -66,11 +64,10 @@
 	position: absolute;
 	top: 22%;
 	text-align: center;
-	/*line-height: 1.3em;*/
 	font-size: 1.4em;
 }
 [class$=-header]{
-	margin-right: 2%;
+	margin-right: 1.5%;
 	border: 1px solid #0cf;
 }
 [class$=-body]{
@@ -80,7 +77,7 @@
 [class$=-header],
 [class$=-body]>div{
 	flex:10;
-	padding: 2% 0 2% 1%;
+	padding: 1% 1% 0;
 }
 [class$=-header]>div,
 [class$=-body]>div>div{
