--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -6,7 +6,7 @@
 
 /*主页面布局*/
 @media all {
-    #content>.lab {
+    #content > .lab {
         flex: 4;
         flex-direction: column;
         display: flex;
@@ -23,7 +23,7 @@
     }
 
     .lab_content_l {
-        flex: 1;
+        flex: .9;
     }
 
     .lab_content_r {
@@ -33,11 +33,13 @@
         margin-top: -1em;
         margin-left: 2em;
     }
-    .lab_content_r>.labSubNav{
-        flex:1;
+
+    .lab_content_r > .labSubNav {
+        flex: 1;
     }
-    .lab_content_r>.switchBox{
-        flex:10;
+
+    .lab_content_r > .switchBox {
+        flex: 10;
         /*outline: 1px dotted rgba(255, 165, 0, 0.44);*/
         outline-offset: -1px;
     }
@@ -83,12 +85,24 @@ li:not(.hasChildren).active {
         background-size: 100% 100%;
     }
 
+    .lab_head [class^=btn-]:hover {
+        color: #069;
+    }
+
     .lab_head [class^=btn-]:nth-of-type(1) .icon {
         background-image: url("../img/labMain/labMain_toTotalStatus.png");
     }
 
+    .lab_head [class^=btn-]:nth-of-type(1):hover .icon {
+        background-image: url("../img/labMain/labMain_toTotalStatus_active.png");
+    }
+
     .lab_head [class^=btn-]:nth-of-type(2) .icon {
         background-image: url("../img/labMain/home.png");
+    }
+
+    .lab_head [class^=btn-]:nth-of-type(2):hover .icon {
+        background-image: url("../img/labMain/home_active.png");
     }
 
     .lab_head h2 {
@@ -188,42 +202,45 @@ li:not(.hasChildren).active {
 }
 
 /*右侧tab标签*/
-.lab_content_r{
+.lab_content_r {
     background-image: url("../img/lab/labTabBoardInland_1.png");
     background-size: 100% 100%;
 }
-.labSubNav>ul{
+
+.labSubNav > ul {
     margin-left: 7em;
 }
 
-.labSubNav>ul>li{
+.labSubNav > ul > li {
     display: inline-block;
     text-align: center;
-    width: 9.6em;
+    width: 10em;
     padding: .75em 0;
     font-size: 1.6em;
     color: #fff;
 }
-.labSubNav>ul>li.active{
+
+.labSubNav > ul > li.active {
     color: #fff;
 }
 
-.lab_content_r>.switchBox{
-    /*background-image: url("../img/lab/labTabBoard_0.png");*/
+.lab_content_r > .switchBox {
     background-size: 100% 100%;
 }
-.lab_content_r>.switchBox>div.item,
-.lab_content_r>.switchBox>div.item>div{
-    height:100%;
+
+.lab_content_r > .switchBox > div.item,
+.lab_content_r > .switchBox > div.item > div {
+    height: 100%;
 }
 
-.lab_content_r>.switchBox>div.item:not(:nth-of-type(1)){
+.lab_content_r > .switchBox > div.item:not(:nth-of-type(1)) {
     display: none;
 }
 
-
-
-
+.lab_content_r > .switchBox > div.item > iframe {
+    height: 100%;
+    background-color: #fff;
+}
 
 
 
