加入视频测试

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -290,9 +290,28 @@
                             </div>
                         </div>
                         <div class="shishi_right">
-                            <div class="item" hidden>
+                            <div class="item" style="display: none">
                                 <div class="video_box">
-                                    <iframe src="http://10.130.96.27/doc/page/preview.asp" frameborder="0" height="100%"></iframe>
+                                    <div class="video_4x4">
+                                        <div id="video01"></div>
+                                        <div id="video02"></div>
+                                        <div id="video03"></div>
+                                        <div id="video04"></div>
+                                        <div id="video05"></div>
+                                        <div id="video06"></div>
+                                        <div id="video07"></div>
+                                        <div id="video08"></div>
+                                        <div id="video09"></div>
+                                        <div id="video10"></div>
+                                        <div id="video11"></div>
+                                        <div id="video12"></div>
+                                        <div id="video13"></div>
+                                        <div id="video14"></div>
+                                        <div id="video15"></div>
+                                        <div id="video16"></div>
+                                        <div id="video17"></div>
+                                        <div id="video18"></div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="item shishi_right_show">
@@ -333,9 +352,26 @@
                         </div>
                         <div class="shishi_right shishi_right_show">
                             <div class="item" hidden>
-                                <div class="video_box">
-                                    <iframe src="http://10.130.96.27/doc/page/preview.asp" frameborder="0" height="100%"></iframe>
+<!--
+                                <div class="video_box video_4x4">
+                                    <div id="video01"></div>
+                                    <div id="video02"></div>
+                                    <div id="video03"></div>
+                                    <div id="video04"></div>
+                                    <div id="video05"></div>
+                                    <div id="video06"></div>
+                                    <div id="video07"></div>
+                                    <div id="video08"></div>
+                                    <div id="video09"></div>
+                                    <div id="video10"></div>
+                                    <div id="video11"></div>
+                                    <div id="video12"></div>
+                                    <div id="video13"></div>
+                                    <div id="video14"></div>
+                                    <div id="video15"></div>
+                                    <div id="video16"></div>
                                 </div>
+-->
                             </div>
                             <div class="item">
                                 <div class='sheshi_right_top'>
@@ -374,3 +410,4 @@
 
 <script src="../static/js/centerLab.js"></script>
 <script src="../static/js/lab.js"></script>
+<script src="../static/asserts/video/swfobject.js"></script>
